migrate to Java11 and JSON-B